<resources>
    <string name="app_name">A7S212021prac8</string>
    <string name="Titulo">Implementacion de Json</string>
    <string name="tnombre">Ingrese su Nombre</string>
    <string name="tedad">Ingrese su Edad</string>
    <string name="tsexo">Ingrese su Sexo</string>
    <string name="tjson">JSon</string>
    <string name="rjson">Resultado Json</string>
    <string name="bjason">Convierte a Json</string>
    <string name="bclase">Convierte Clase</string>
</resources>